==============================
   FoxBot Version History
==============================

--------------------------------------------------------------------------------
Version 0.801
??-??-202?
Updated by RoboCop
--------------------------------------------------------------------------------

TODO List:-

>> Fix bot_chat cvars

>> Allow bots to toss grenades at a higher angle and low range as their target aim is too short

>> Find a way to allow bot_job_think.cpp task priorities work properly (45 jobs in total too much?)

>> BONUS: Maybe add a feature for bots to have experience and wisdom in order to be more human

--------------------------------------------------------------------------------
Version 0.800
September-10-2021
Updated by RoboCop
--------------------------------------------------------------------------------

- Added new waypoints:-
	+ axlfly
	+ botspree
	+ dustbowl_old
	+ dustbowl2_v2
	+ gen_complex
	+ insideout
	+ lbdustbowl
	+ madcanyon
	+ mulch_dm2b1
	+ murderball1_3
	+ osaka_l
	+ osaka_r2
	+ rats2v2
	+ rock2_2way_r
	+ rock2_open_r
	+ sandbowl_r
	+ turbine
	+ warpath_r2

- Reinstated the 'foxbot_commander' feature

- Reduced fire delay for Sniper's Auto-Rifle

- Reduced further more redundant codes and added more C++14 support
	
- Reduced overflow issues and instability crashes

- Reduced Reachable Range to prevent waypoints creation from adding too many junctions

- Fixed Listenserver foxbot.cfg and other .cfg load failures

- Added some support for murderball, murderball1_3 and murderball-2002

- Fixed the unreachable waypoint in warpath as well as enhanced its other waypoints

- Reduced StartFrame stack by reducing some unwanted features and lines that exceed it
	
- Added more reaction time delay for bots to attack enemies as they were too quick to respond

- Improved dustbowl waypoint by removing rogue pathways in the Jump Point for Capture Point 1, 2 and 3
	