@@ -8,6 +8,11 @@ Version 0.801
 Updated by RoboCop
 --------------------------------------------------------------------------------
 
+- Added new waypoints:-
+	+ congestus_lg
+
+- Added area for bots to report Sentry Built in dustbowl hut entry in CP1
+
 TODO List:-
 
 >> Fix bot_chat cvars
